--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
 </head>
 
 <body>
-<button class="mdc-button foo-button">
-    <div class="mdc-button__ripple"></div>
-    <span class="mdc-button__label">Button</span>
-</button>
+    <button class="mdc-button foo-button">
+        <div class="mdc-button__ripple"></div>
+        <span class="mdc-button__label">Material Button</span>
+    </button>
 </body>
 
-<script>mdc.ripple.MDCRipple.attachTo(document.querySelector('.foo-button'));</script>
+<script>
+    mdc.ripple.MDCRipple.attachTo(document.querySelector('.foo-button'));
+</script>
 
 </html>
