--- a/index.html
+++ b/index.html
@@ -12,6 +12,36 @@
         <div class="mdc-button__ripple"></div>
         <span class="mdc-button__label">Material Button</span>
     </button>
+
+
+
+
+
+
+
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/7.15.0/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="https://www.gstatic.com/firebasejs/7.15.0/firebase-analytics.js"></script>
+
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyBd-aqaxVUxTNdj6D49IPDZk2a0U_SDRl0",
+    authDomain: "frc-scouting-epicnd.firebaseapp.com",
+    databaseURL: "https://frc-scouting-epicnd.firebaseio.com",
+    projectId: "frc-scouting-epicnd",
+    storageBucket: "frc-scouting-epicnd.appspot.com",
+    messagingSenderId: "818544231802",
+    appId: "1:818544231802:web:cd625c57330f00af55c2c3",
+    measurementId: "G-JS1BSNMHJS"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  firebase.analytics();
+</script>
 </body>
 
 <script>
