--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
 <script>
     mdc.ripple.MDCRipple.attachTo(document.querySelector('.foo-button'));
-  document.getElementById('button').on('click', () => {testFunc(2018, "2018mndu")})
+  // document.getElementById('button').on('click', () => {testFunc(2018, "2018mndu")})
 </script>
 
 </html>
