--- a/index.html
+++ b/index.html
@@ -9,39 +9,27 @@
 </head>
 
 <body>
-    <button class="mdc-button foo-button">
-        <div class="mdc-button__ripple"></div>
-        <span class="mdc-button__label">Material Button</span>
-    </button>
 
-    <center>
-        <table  class="sortable" id="table">
-        <thead>
-          <tr class="theader">
-            <th class="inline-centering, sorttable_numeric" id="teamRanks">Rank</th>
-            <th class = "inline-centering, sorttable_alpha" id="teamNames"> Team Name </th>
+    <div class="header">
+      <div class="titleText mdc-button">EpicND</div>
+      <div class="headerSpace"> </div>
+      <div class="sButtons">
+        <button class="mdc-button foo-button">
+            <div class="mdc-button__ripple"></div>
+            <span class="mdc-button__label si">Sign In</span>
+        </button>
+        <button class="mdc-button foo-button">
+            <div class="mdc-button__ripple"></div>
+            <span class="mdc-button__label">Info</span>
+        </button>
+        <div>
+          <div></div>
+        </div>
+      </div>
+    </div>
 
-            <th class="sorttable_numeric"> Auto </th>
-            <th class="sorttable_numeric"> teleOP </th>
-            <th class="sorttable_numeric"> Win Rate  </th>
-            <th class="sorttable_numeric, inline-collapsable">Avg # of Balls (Bottom) </th>
-            <th class="sorttable_numeric, inline-collapsable">Avg # of Balls (Outer) </th>
-            <th class="sorttable_numeric, inline-collapsable">Avg # of Balls (Inner) </th>
+    <div class="title"> Scoultimate<a class="undl">_</a></div>
 
-
-
-          </tr>
-          <tbody id="table-items">
-
-          </tbody>
-
-        </thead>
-        <tbody id = "table-items">
-
-        </tbody>
-
-  </table>
-  </center>
 
 
 
