--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 <body>
 
     <div class="header">
-      <div class="titleText mdc-button">EpicND</div>
+      <div class="titleText mdc-button">???</div>
       <div class="headerSpace"> </div>
       <div class="sButtons">
         <button class="mdc-button foo-button">
             <div class="mdc-button__ripple"></div>
-            <span class="mdc-button__label si">Sign In</span>
+            <span class="mdc-button__label">dropdown</span>
         </button>
         <button class="mdc-button foo-button">
             <div class="mdc-button__ripple"></div>
-            <span class="mdc-button__label">Info</span>
+            <span class="mdc-button__label si">Sign In</span>
         </button>
         <div>
           <div></div>
@@ -28,7 +28,7 @@
       </div>
     </div>
 
-    <div class="title"> Scoultimate<a class="undl">_</a></div>
+    <div class="title"> Scoultimate <a class="undl">_</a></div>
 
 
 
