--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
 </head>
 
 <body>
+  <div id="particles-js">     </div>
+  <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+
+
 
     <div class="header">
-      <div class="titleText mdc-button">???</div>
+      <div class="titleText mdc-button">Logo</div>
       <div class="headerSpace"> </div>
       <div class="sButtons">
         <button class="mdc-button foo-button">
@@ -28,10 +32,21 @@
       </div>
     </div>
 
-    <div class="title"> Scoultimate <a class="undl">_</a></div>
 
+    <div class="title"> Scoultimate<a class="undl">_</a></div>
 
+    <div class="subtitle">Half Social Media, Half Scouting App</div>
+    <div class="subtitle green">A modern, all inclusive, Robotics Portal</div>
 
+    <div class="vertical-space"> </div>
+
+    <div class="other-services">
+      <div class="l-space sv"> </div>
+      <div class="ios sv"><img src="https://img.icons8.com/dusk/64/000000/ios-logo.png"/></div>
+      <div class="android sv"><img src="https://img.icons8.com/dusk/64/000000/android.png"/></div>
+      <div class="discord sv"><img src="https://img.icons8.com/plasticine/100/000000/discord-logo.png"/></div>
+      <div class="slack sv"><img src="https://img.icons8.com/dusk/64/000000/slack.png"/></div>
+    </div>
 
 
 
