gamers of the world unite

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
     <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
     <link rel=stylesheet href="test.css">
+    <link rel=stylesheet href="dropdown.css">
 </head>
 
 <body>
@@ -20,7 +21,7 @@
       <div class="sButtons">
         <button class="mdc-button foo-button">
             <div class="mdc-button__ripple"></div>
-            <span class="mdc-button__label">dropdown</span>
+            <span class="mdc-button__label">➜</span>
         </button>
         <button class="mdc-button foo-button">
             <div class="mdc-button__ripple"></div>
@@ -47,6 +48,20 @@
       <div class="discord sv"><img src="https://img.icons8.com/plasticine/100/000000/discord-logo.png"/></div>
       <div class="slack sv"><img src="https://img.icons8.com/dusk/64/000000/slack.png"/></div>
     </div>
+
+    <div class="vertical-space"> </div>
+
+    <div>
+
+      <button class="mdc-button foo-button ges">
+          <div class="mdc-button__ripple"></div>
+          <span class="mdc-button__label ohg" id="gh">Get Started</span>
+      </button>
+
+    </div>
+
+
+
 
 
 
@@ -78,6 +93,7 @@
 
 
     <script src="test.js"> </script>
+    <script src="cookiemanager.js"> </script>
 </body>
 
 <script>
