--- a/index.html
+++ b/index.html
@@ -52,13 +52,20 @@
     <div class="vertical-space"> </div>
 
     <div>
-
       <button class="mdc-button foo-button ges">
           <div class="mdc-button__ripple"></div>
           <span class="mdc-button__label ohg" id="gh">Get Started</span>
       </button>
 
     </div>
+
+
+
+    <footer>
+    <div class="copyright"> © Neev Mangal and Dhairya Gupta, EpicND
+            <br> Art by Sai Shinde
+    </div>
+  </footer>
 
 
 
