--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
   </header> -->
 
   <aside class="mdc-drawer mdc-drawer--modal">
+    <div class="mdc-drawer__header">
+      <h3 class="mdc-drawer__title">Scoultimate</h3>
+      <h6 class="mdc-drawer__subtitle">Testing123</h6>
+    </div>
     <div class="mdc-drawer__content">
       <nav class="mdc-list">
         <a class="mdc-list-item mdc-list-item--activated" href="#" tabindex="0" aria-current="page">
