--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
   <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script> -->
 
   <aside class="mdc-drawer mdc-drawer--modal">
+    <div class="mdc-drawer__header">
+      <h3 class="mdc-drawer__title">Scoultimate</h3>
+      <h6 class="mdc-drawer__subtitle">Copyright EpicND</h6>
+    </div>
     <div class="mdc-drawer__content">
       <nav class="mdc-list">
         <a class="mdc-list-item mdc-list-item--activated" href="#" tabindex="0" aria-current="page">
