--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
     <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
     <link rel=stylesheet href="test.css">
-    <link rel=stylesheet href="dropdown.css">
+    <!-- <link rel=stylesheet href="dropdown.css"> -->
 </head>
 
 <body>
@@ -48,9 +48,9 @@
 
     <header class="mdc-top-app-bar mdc-top-app-bar--fixed">
       <div class="mdc-top-app-bar__row">
-        <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
+        <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start" id="headerC">
           <button class="material-icons mdc-top-app-bar__navigation-icon mdc-icon-button">menu</button>
-          <span class="mdc-top-app-bar__title">Title</span>
+          <span class="mdc-top-app-bar__title"></span>
         </section>
       </div>
     </header>
