--- a/index.html
+++ b/index.html
@@ -21,22 +21,30 @@
 
   <aside class="mdc-drawer mdc-drawer--modal">
     <div class="mdc-drawer__header">
-      <h3 class="mdc-drawer__title">Scoultimate</h3>
-      <h6 class="mdc-drawer__subtitle">Copyright EpicND</h6>
+      <h3 class="mdc-drawer__title" src="signin.html">Dashboard</h3>
+      <h6 class="mdc-drawer__subtitle"><a href="signin.html" class="link signin">Sign In</a></h6>
     </div>
     <div class="mdc-drawer__content">
       <nav class="mdc-list">
         <a class="mdc-list-item mdc-list-item--activated" href="#" tabindex="0" aria-current="page">
-          <i class="material-icons mdc-list-item__graphic" aria-hidden="true">inbox</i>
-          <span class="mdc-list-item__text">Inbox</span>
+          <i class="material-icons mdc-list-item__graphic" aria-hidden="true" src="signin.html">account_circle</i>
+          <span class="mdc-list-item__text" href="signin.html">My Account</span>
         </a>
         <a class="mdc-list-item" href="#" tabindex="0">
-          <i class="material-icons mdc-list-item__graphic" aria-hidden="true">send</i>
-          <span class="mdc-list-item__text">Outgoing</span>
+          <i class="material-icons mdc-list-item__graphic" aria-hidden="true">all_out</i>
+          <span class="mdc-list-item__text">My Team</span>
         </a>
         <a class="mdc-list-item" href="#" tabindex="0">
-          <i class="material-icons mdc-list-item__graphic" aria-hidden="true">drafts</i>
-          <span class="mdc-list-item__text">Drafts</span>
+          <i class="material-icons mdc-list-item__graphic" aria-hidden="true">search</i>
+          <span class="mdc-list-item__text">Search</span>
+        </a>
+        <a class="mdc-list-item" href="#" tabindex="0">
+          <i class="material-icons mdc-list-item__graphic" aria-hidden="true">notes</i>
+          <span class="mdc-list-item__text">Scouting</span>
+        </a>
+        <a class="mdc-list-item" href="#" tabindex="0">
+          <i class="material-icons mdc-list-item__graphic" aria-hidden="true">miscellaneous_services</i>
+          <span class="mdc-list-item__text">Other Services</span>
         </a>
       </nav>
     </div>
