--- a/testing.html
+++ b/testing.html
@@ -1,26 +1,99 @@
 <!DOCTYPE html>
-<html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"><meta name="theme-color" content="#000000"><link rel="manifest" href="/material-components-web-catalog/manifest.json"><link rel="shortcut icon" href="/material-components-web-catalog/static/media/mdc_web_48dp.png"><link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik:300,400,500"><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono"><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700"><title>Material Components Web | Catalog</title><link href="/material-components-web-catalog/static/css/main.9ffc8ab3.css" rel="stylesheet"></head><body class="mdc-typography"><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"><div class="drawer-frame-root"><aside class="mdc-drawer mdc-drawer--modal"><div class="mdc-drawer__header"><h3 class="mdc-drawer__title">Mail</h3><h6 class="mdc-drawer__subtitle">email@material.io</h6></div><div class="mdc-drawer__content"><nav class="mdc-list"><a class="mdc-list-item mdc-list-item--activated" href="#" tabindex="-1" aria-selected="true"><i class="material-icons mdc-list-item__graphic" aria-hidden="true">inbox</i>Inbox</a><a class="mdc-list-item" href="#" tabindex="-1"><i class="material-icons mdc-list-item__graphic" aria-hidden="true">star</i>Star</a><a class="mdc-list-item" href="#" tabindex="-1"><i class="material-icons mdc-list-item__graphic" aria-hidden="true">send</i>Sent Mail</a><a class="mdc-list-item" href="#" tabindex="-1"><i class="material-icons mdc-list-item__graphic" aria-hidden="true">drafts</i>Drafts</a><hr class="mdc-list-divider"><h6 class="mdc-list-group__subheader">Labels</h6><a class="mdc-list-item" href="#" tabindex="-1"><i class="material-icons mdc-list-item__graphic" aria-hidden="true">bookmark</i>Family</a><a class="mdc-list-item" href="#" tabindex="-1"><i class="material-icons mdc-list-item__graphic" aria-hidden="true">bookmark</i>Friends</a><a class="mdc-list-item" href="#" tabindex="-1"><i class="material-icons mdc-list-item__graphic" aria-hidden="true">bookmark</i>Work</a><hr class="mdc-list-divider"><a class="mdc-list-item" href="#" tabindex="-1"><i class="material-icons mdc-list-item__graphic" aria-hidden="true">settings</i>Settings</a><a class="mdc-list-item" href="#" tabindex="-1"><i class="material-icons mdc-list-item__graphic" aria-hidden="true">announcement</i>Help &amp; feedback</a></nav></div></aside><div class="mdc-drawer-scrim"></div><div class="drawer-frame-app-content"><header class="mdc-top-app-bar drawer-top-app-bar"><div class="mdc-top-app-bar__row"><section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start"><button class="mdc-icon-button material-icons mdc-top-app-bar__navigation-icon mdc-ripple-upgraded--unbounded mdc-ripple-upgraded" style="--mdc-ripple-fg-size:28px; --mdc-ripple-fg-scale:1.71429; --mdc-ripple-left:10px; --mdc-ripple-top:10px;">menu</button><span class="mdc-top-app-bar__title">Modal Drawer</span></section></div></header><div class="drawer-main-content"><div class="mdc-top-app-bar--fixed-adjust"></div><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-    enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-    voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-    occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-    anim id est laborum.</p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-    enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-    voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-    occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-    anim id est laborum.</p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-    enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-    voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-    occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-    anim id est laborum.</p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-    enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-    voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-    occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-    anim id est laborum.</p></div></div></div></div><script async="" src="https://www.google-analytics.com/analytics.js"></script><script type="text/javascript" src="/material-components-web-catalog/static/js/main.a88a1f88.js"></script></body></html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
+    <meta name="theme-color" content="#000000">
+    <link rel="manifest" href="/material-components-web-catalog/manifest.json">
+    <link rel="shortcut icon" href="/material-components-web-catalog/static/media/mdc_web_48dp.png">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik:300,400,500">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700">
+    <title>Material Components Web | Catalog</title>
+    <link href="/material-components-web-catalog/static/css/main.9ffc8ab3.css" rel="stylesheet">
+</head>
+
+<body class="mdc-typography"><noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root">
+        <div class="drawer-frame-root">
+            <aside class="mdc-drawer mdc-drawer--modal">
+                <div class="mdc-drawer__header">
+                    <h3 class="mdc-drawer__title">Mail</h3>
+                    <h6 class="mdc-drawer__subtitle">email@material.io</h6>
+                </div>
+                <div class="mdc-drawer__content">
+                    <nav class="mdc-list"><a class="mdc-list-item mdc-list-item--activated" href="#" tabindex="-1"
+                            aria-selected="true"><i class="material-icons mdc-list-item__graphic"
+                                aria-hidden="true">inbox</i>Inbox</a><a class="mdc-list-item" href="#" tabindex="-1"><i
+                                class="material-icons mdc-list-item__graphic" aria-hidden="true">star</i>Star</a><a
+                            class="mdc-list-item" href="#" tabindex="-1"><i
+                                class="material-icons mdc-list-item__graphic" aria-hidden="true">send</i>Sent Mail</a><a
+                            class="mdc-list-item" href="#" tabindex="-1"><i
+                                class="material-icons mdc-list-item__graphic" aria-hidden="true">drafts</i>Drafts</a>
+                        <hr class="mdc-list-divider">
+                        <h6 class="mdc-list-group__subheader">Labels</h6><a class="mdc-list-item" href="#"
+                            tabindex="-1"><i class="material-icons mdc-list-item__graphic"
+                                aria-hidden="true">bookmark</i>Family</a><a class="mdc-list-item" href="#"
+                            tabindex="-1"><i class="material-icons mdc-list-item__graphic"
+                                aria-hidden="true">bookmark</i>Friends</a><a class="mdc-list-item" href="#"
+                            tabindex="-1"><i class="material-icons mdc-list-item__graphic"
+                                aria-hidden="true">bookmark</i>Work</a>
+                        <hr class="mdc-list-divider"><a class="mdc-list-item" href="#" tabindex="-1"><i
+                                class="material-icons mdc-list-item__graphic"
+                                aria-hidden="true">settings</i>Settings</a><a class="mdc-list-item" href="#"
+                            tabindex="-1"><i class="material-icons mdc-list-item__graphic"
+                                aria-hidden="true">announcement</i>Help &amp; feedback</a>
+                    </nav>
+                </div>
+            </aside>
+            <div class="mdc-drawer-scrim"></div>
+            <div class="drawer-frame-app-content">
+                <header class="mdc-top-app-bar drawer-top-app-bar">
+                    <div class="mdc-top-app-bar__row">
+                        <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start"><button
+                                class="mdc-icon-button material-icons mdc-top-app-bar__navigation-icon mdc-ripple-upgraded--unbounded mdc-ripple-upgraded"
+                                style="--mdc-ripple-fg-size:28px; --mdc-ripple-fg-scale:1.71429; --mdc-ripple-left:10px; --mdc-ripple-top:10px;">menu</button><span
+                                class="mdc-top-app-bar__title">Modal Drawer</span></section>
+                    </div>
+                </header>
+                <div class="drawer-main-content">
+                    <div class="mdc-top-app-bar--fixed-adjust"></div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                        enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+                        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+                        anim id est laborum.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                        enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+                        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+                        anim id est laborum.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                        enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+                        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+                        anim id est laborum.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                        enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+                        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+                        anim id est laborum.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script async="" src="https://www.google-analytics.com/analytics.js"></script>
+    <script type="text/javascript" src="/material-components-web-catalog/static/js/main.a88a1f88.js"></script>
+</body>
+
+</html>
