--- a/index.html
+++ b/index.html
@@ -159,6 +159,9 @@ topAppBar.listen('MDCTopAppBar:nav', () => {
   drawer.open = !drawer.open;
 });
   // document.getElementById('button').on('click', () => {testFunc(2018, "2018mndu")})
+
+
 </script>
+<script src="scripts/authentication.js"></script>
 
 </html>
