--- a/testing.html
+++ b/testing.html
@@ -1,99 +1,257 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<!--
+Copyright (c) 2016 Google Inc.
+Licensed under the Apache License, Version 2.0 (the "License");
+you may not use this file except in compliance with the License.
+You may obtain a copy of the License at
+http://www.apache.org/licenses/LICENSE-2.0
+Unless required by applicable law or agreed to in writing, software
+distributed under the License is distributed on an "AS IS" BASIS,
+WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+See the License for the specific language governing permissions and
+limitations under the License.
+-->
+<html>
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
-    <meta name="theme-color" content="#000000">
-    <link rel="manifest" href="/material-components-web-catalog/manifest.json">
-    <link rel="shortcut icon" href="/material-components-web-catalog/static/media/mdc_web_48dp.png">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik:300,400,500">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700">
-    <title>Material Components Web | Catalog</title>
-    <link href="/material-components-web-catalog/static/css/main.9ffc8ab3.css" rel="stylesheet">
-</head>
+  <meta charset=utf-8 />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!--
+    Note that Google Sign In does not work from a file URL. You will need to make
+    this page available from a web server, either from localhost or using Firebase
+    Hosting.
+    Whichever domain it is running on, you'll have to add the origin for that domain
+    in the Google Developer Console: https://console.developers.google.com, search
+    for Credentials and create a new credential > OAuth client ID > web application,
+    and set the domain as an authorised origin (e.g. http://localhost:8000 or https://foo.bar).
+    -->
+  <!-- [START google_config] -->
+  <!-- **********************************************
+       * TODO(DEVELOPER): Use your Client ID below. *
+       ********************************************** -->
+  <meta name="google-signin-client_id" content="YOUR_CLIENT_ID">
+  <meta name="google-signin-cookiepolicy" content="single_host_origin">
+  <meta name="google-signin-scope" content="profile email">
+  <!-- [END google_config] -->
+  <title>Google Sign In Example</title>
 
-<body class="mdc-typography"><noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root">
-        <div class="drawer-frame-root">
-            <aside class="mdc-drawer mdc-drawer--modal">
-                <div class="mdc-drawer__header">
-                    <h3 class="mdc-drawer__title">Mail</h3>
-                    <h6 class="mdc-drawer__subtitle">email@material.io</h6>
-                </div>
-                <div class="mdc-drawer__content">
-                    <nav class="mdc-list"><a class="mdc-list-item mdc-list-item--activated" href="#" tabindex="-1"
-                            aria-selected="true"><i class="material-icons mdc-list-item__graphic"
-                                aria-hidden="true">inbox</i>Inbox</a><a class="mdc-list-item" href="#" tabindex="-1"><i
-                                class="material-icons mdc-list-item__graphic" aria-hidden="true">star</i>Star</a><a
-                            class="mdc-list-item" href="#" tabindex="-1"><i
-                                class="material-icons mdc-list-item__graphic" aria-hidden="true">send</i>Sent Mail</a><a
-                            class="mdc-list-item" href="#" tabindex="-1"><i
-                                class="material-icons mdc-list-item__graphic" aria-hidden="true">drafts</i>Drafts</a>
-                        <hr class="mdc-list-divider">
-                        <h6 class="mdc-list-group__subheader">Labels</h6><a class="mdc-list-item" href="#"
-                            tabindex="-1"><i class="material-icons mdc-list-item__graphic"
-                                aria-hidden="true">bookmark</i>Family</a><a class="mdc-list-item" href="#"
-                            tabindex="-1"><i class="material-icons mdc-list-item__graphic"
-                                aria-hidden="true">bookmark</i>Friends</a><a class="mdc-list-item" href="#"
-                            tabindex="-1"><i class="material-icons mdc-list-item__graphic"
-                                aria-hidden="true">bookmark</i>Work</a>
-                        <hr class="mdc-list-divider"><a class="mdc-list-item" href="#" tabindex="-1"><i
-                                class="material-icons mdc-list-item__graphic"
-                                aria-hidden="true">settings</i>Settings</a><a class="mdc-list-item" href="#"
-                            tabindex="-1"><i class="material-icons mdc-list-item__graphic"
-                                aria-hidden="true">announcement</i>Help &amp; feedback</a>
-                    </nav>
-                </div>
-            </aside>
-            <div class="mdc-drawer-scrim"></div>
-            <div class="drawer-frame-app-content">
-                <header class="mdc-top-app-bar drawer-top-app-bar">
-                    <div class="mdc-top-app-bar__row">
-                        <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start"><button
-                                class="mdc-icon-button material-icons mdc-top-app-bar__navigation-icon mdc-ripple-upgraded--unbounded mdc-ripple-upgraded"
-                                style="--mdc-ripple-fg-size:28px; --mdc-ripple-fg-scale:1.71429; --mdc-ripple-left:10px; --mdc-ripple-top:10px;">menu</button><span
-                                class="mdc-top-app-bar__title">Modal Drawer</span></section>
-                    </div>
-                </header>
-                <div class="drawer-main-content">
-                    <div class="mdc-top-app-bar--fixed-adjust"></div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                        enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-                        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-                        anim id est laborum.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                        enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-                        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-                        anim id est laborum.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                        enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-                        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-                        anim id est laborum.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                        enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-                        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-                        anim id est laborum.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <script async="" src="https://www.google-analytics.com/analytics.js"></script>
-    <script type="text/javascript" src="/material-components-web-catalog/static/js/main.a88a1f88.js"></script>
+  <!-- Material Design Theming -->
+  <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.orange-indigo.min.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
+
+  <link rel="stylesheet" href="main.css">
+
+  <!-- Google Sign In -->
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
+
+  <!-- Import and configure the Firebase SDK -->
+  <!-- These scripts are made available when the app is served or deployed on Firebase Hosting -->
+  <!-- If you do not serve/host your project using Firebase Hosting see https://firebase.google.com/docs/web/setup -->
+  <!-- <script src="/__/firebase/7.15.0/firebase-app.js"></script> -->
+
+  <!-- <script src="/__/firebase/init.js"></script> -->
+
+
+  <script src="https://www.gstatic.com/firebasejs/7.15.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.15.0/firebase-auth.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="https://www.gstatic.com/firebasejs/7.15.0/firebase-analytics.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.15.0/firebase-database.js"></script>
+
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyBd-aqaxVUxTNdj6D49IPDZk2a0U_SDRl0",
+    authDomain: "frc-scouting-epicnd.firebaseapp.com",
+    databaseURL: "https://frc-scouting-epicnd.firebaseio.com",
+    projectId: "frc-scouting-epicnd",
+    storageBucket: "frc-scouting-epicnd.appspot.com",
+    messagingSenderId: "818544231802",
+    appId: "1:818544231802:web:cd625c57330f00af55c2c3",
+    measurementId: "G-JS1BSNMHJS"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  firebase.analytics();
+</script>
+
+
+
+    <script src="test.js"> </script>
+    <script src="cookiemanager.js"> </script>
 </body>
 
+<script>
+    mdc.ripple.MDCRipple.attachTo(document.querySelector('.foo-button'));
+    const list = mdc.drawer.MDCDrawer.attachTo(document.querySelector('.mdc-drawer'))
+    list.wrapFocus = true;
+    function testFunct(){
+      list.wrapFocus = true;
+    }
+    const drawer = mdc.drawer.MDCDrawer.attachTo(document.querySelector('.mdc-drawer'));
+const topAppBar = mdc.topAppBar.MDCTopAppBar.attachTo(document.querySelector('.mdc-top-app-bar'));
+topAppBar.listen('MDCTopAppBar:nav', () => {
+  drawer.open = !drawer.open;
+});
+  // document.getElementById('button').on('click', () => {testFunc(2018, "2018mndu")})
+
+
+</script>
+  <script type="text/javascript">
+
+    // [START googlecallback]
+    function onSignIn(googleUser) {
+      console.log('Google Auth Response', googleUser);
+      // We need to register an Observer on Firebase Auth to make sure auth is initialized.
+      var unsubscribe = firebase.auth().onAuthStateChanged(function(firebaseUser) {
+        unsubscribe();
+        // Check if we are already signed-in Firebase with the correct user.
+        if (!isUserEqual(googleUser, firebaseUser)) {
+          // Build Firebase credential with the Google ID token.
+          // [START googlecredential]
+          var credential = firebase.auth.GoogleAuthProvider.credential(
+              googleUser.getAuthResponse().id_token);
+          // [END googlecredential]
+          // Sign in with credential from the Google user.
+          // [START authwithcred]
+          firebase.auth().signInWithCredential(credential).catch(function(error) {
+            // Handle Errors here.
+            var errorCode = error.code;
+            var errorMessage = error.message;
+            // The email of the user's account used.
+            var email = error.email;
+            // The firebase.auth.AuthCredential type that was used.
+            var credential = error.credential;
+            // [START_EXCLUDE]
+            if (errorCode === 'auth/account-exists-with-different-credential') {
+              alert('You have already signed up with a different auth provider for that email.');
+              // If you are using multiple auth providers on your app you should handle linking
+              // the user's accounts here.
+            } else {
+              console.error(error);
+            }
+            // [END_EXCLUDE]
+          });
+          // [END authwithcred]
+        } else {
+          console.log('User already signed-in Firebase.');
+        }
+      });
+    }
+    // [END googlecallback]
+
+    /**
+     * Check that the given Google user is equals to the given Firebase user.
+     */
+    // [START checksameuser]
+    function isUserEqual(googleUser, firebaseUser) {
+      if (firebaseUser) {
+        var providerData = firebaseUser.providerData;
+        for (var i = 0; i < providerData.length; i++) {
+          if (providerData[i].providerId === firebase.auth.GoogleAuthProvider.PROVIDER_ID &&
+              providerData[i].uid === googleUser.getBasicProfile().getId()) {
+            // We don't need to reauth the Firebase connection.
+            return true;
+          }
+        }
+      }
+      return false;
+    }
+    // [END checksameuser]
+
+    /**
+     * Handle the sign out button press.
+     */
+    function handleSignOut() {
+      var googleAuth = gapi.auth2.getAuthInstance();
+      googleAuth.signOut().then(function() {
+        firebase.auth().signOut();
+      });
+    }
+
+
+    /**
+     * initApp handles setting up UI event listeners and registering Firebase auth listeners:
+     *  - firebase.auth().onAuthStateChanged: This listener is called when the user is signed in or
+     *    out, and that is where we update the UI.
+     */
+    function initApp() {
+      // Auth state changes.
+      // [START authstatelistener]
+      firebase.auth().onAuthStateChanged(function(user){
+        if (user) {
+          // User is signed in.
+          var displayName = user.displayName;
+          var email = user.email;
+          var emailVerified = user.emailVerified;
+          var photoURL = user.photoURL;
+          var isAnonymous = user.isAnonymous;
+          var uid = user.uid;
+          var providerData = user.providerData;
+          // [START_EXCLUDE]
+          document.getElementById('quickstart-sign-in-status').textContent = 'Signed in';
+          document.getElementById('signout').disabled = false;
+          document.getElementById('quickstart-account-details').textContent = JSON.stringify(user, null, '  ');
+          // [END_EXCLUDE]
+        } else {
+          // User is signed out.
+          // [START_EXCLUDE]
+          document.getElementById('quickstart-sign-in-status').textContent = 'Signed out';
+          document.getElementById('signout').disabled = true;
+          document.getElementById('quickstart-account-details').textContent = 'null';
+            // [END_EXCLUDE]
+        }
+      });
+      // [END authstatelistener]
+
+      document.getElementById('signout').addEventListener('click', handleSignOut, false);
+    }
+
+    window.onload = function() {
+      initApp();
+    };
+  </script>
+</head>
+<body>
+<div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
+
+  <!-- Header section containing title -->
+  <header class="mdl-layout__header mdl-color-text--white mdl-color--light-blue-700">
+    <div class="mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-grid">
+      <div class="mdl-layout__header-row mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--8-col-desktop">
+        <a href="/"><h3>Firebase Authentication</h3></a>
+      </div>
+    </div>
+  </header>
+
+  <main class="mdl-layout__content mdl-color--grey-100">
+    <div class="mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-grid">
+
+      <!-- Container for the demo -->
+      <div class="mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--12-col-desktop">
+        <div class="mdl-card__title mdl-color--light-blue-600 mdl-color-text--white">
+          <h2 class="mdl-card__title-text">Google Authentication with OAuth Credentials</h2>
+        </div>
+        <div class="mdl-card__supporting-text mdl-color-text--grey-600">
+          <p>Sign in with your Google account below.</p>
+          <!-- [START google_button] -->
+          <div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
+          <!-- [END google_button] -->
+          <br>
+          <button disabled class="mdl-button mdl-js-button mdl-button--raised" id="signout" name="signout">Sign Out</button>
+
+          <div class="quickstart-user-details-container">
+            Firebase sign-in status: <span id="quickstart-sign-in-status">Unknown</span>
+            <div>Firebase auth <code>currentUser</code> object value:</div>
+            <pre><code id="quickstart-account-details">null</code></pre>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </main>
+</div>
+</body>
 </html>
