--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
           <i class="material-icons mdc-list-item__graphic" aria-hidden="true">miscellaneous_services</i>
           <span class="mdc-list-item__text">Other Services</span>
         </a>
+        <a class="mdc-list-item" href="#" tabindex="0">
+          <i class="material-icons mdc-list-item__graphic" aria-hidden="true">info</i>
+          <span class="mdc-list-item__text">Info</span>
+        </a>
       </nav>
     </div>
   </aside>
@@ -83,7 +87,6 @@
     </header>
 
     <main class="mdc-top-app-bar--fixed-adjust">
-        Content
     </main>
 
   </div>
