--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
     <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    
     <link rel=stylesheet href="test.css">
     <title> Scoultimate</title>
     <!-- <link rel=stylesheet href="dropdown.css"> -->
