--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    
+
     <link rel=stylesheet href="test.css">
     <title> Scoultimate</title>
     <!-- <link rel=stylesheet href="dropdown.css"> -->
@@ -49,7 +49,7 @@
     <div class="mdc-drawer__content">
       <nav class="mdc-list">
         <a class="mdc-list-item mdc-list-item--activated" href="#" tabindex="0" aria-current="page">
-          <i class="material-icons mdc-list-item__graphic avatar" aria-hidden="true" src="signin.html"></i>
+          <i class="material-icons mdc-list-item__graphic avatar avatar2" aria-hidden="true" src="signin.html"></i>
           <span class="mdc-list-item__text dashboard-account" id="dashboard-account" href="signin.html">My Account</span>
         </a>
         <a class="mdc-list-item" href="#" tabindex="0">
