--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <div class="mdc-drawer__header">
       <h3 class="mdc-drawer__title" src="signin.html">Dashboard</h3>
       <h6 class="mdc-drawer__subtitle trigger"><a href="javascript:void(0)"  class="link signin dashboard-signin" id="dashboard-signin">Sign In</a></h6>
+      <img class="asr" src="assets/favicon.ico" />
     </div>
     <div class="mdc-drawer__content">
       <nav class="mdc-list">
