--- a/index.html
+++ b/index.html
@@ -111,6 +111,24 @@
       <div class="slack sv"><img src="https://img.icons8.com/dusk/64/000000/slack.png"/></div>
     </div>
 
+    <div class="other-services-mobile">
+      <div class="other-services-mobile">
+        <div class="l-space sv"> </div>
+        <div class="discord sv none"></div>
+        <div class="ios sv"><img src="https://img.icons8.com/dusk/64/000000/ios-logo.png"/></div>
+        <div class="android sv"><img src="https://img.icons8.com/dusk/64/000000/android.png"/></div>
+        <div class="slack sv none"></div>
+        <div class="l-space sv"> </div>
+      </div>
+      <div class="other-services-mobile">
+        <div class="l-space sv"> </div>
+        <div class="ios sv none"></div>
+        <div class="discord sv"><img src="https://img.icons8.com/plasticine/100/000000/discord-logo.png"/></div>
+        <div class="slack sv"><img src="https://img.icons8.com/dusk/64/000000/slack.png"/></div>
+        <div class="slack sv none"></div>
+      </div>
+    </div>
+
     <div class="vertical-space"> </div>
 
     <div>
