--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div>
     <div class="mdc-drawer__content">
       <nav class="mdc-list">
-        <a class="mdc-list-item mdc-list-item--activated" href="#" tabindex="0" aria-current="page">
+        <a class="mdc-list-item mdc-list-item--activated dashboard-account" href="#" tabindex="0" aria-current="page">
           <i class="material-icons mdc-list-item__graphic avatar avatar2" aria-hidden="true" src="signin.html"></i>
           <span class="mdc-list-item__text dashboard-account" id="dashboard-account" href="signin.html">My Account</span>
         </a>
