--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     <div class="vertical-space"> </div>
 
     <div>
-      <button class="mdc-button foo-button ges" onclick="testFunct()">
+      <button class="mdc-button foo-button ges gusty" id="ghs" onclick="testFunct()">
           <div class="mdc-button__ripple"></div>
           <span class="mdc-button__label ohg" id="gh" >Get Started</span>
       </button>
