--- a/team.html
+++ b/team.html
@@ -19,6 +19,7 @@
   <meta name="msapplication-TileColor" content="#2b5797">
   <meta name="msapplication-config" content="assets/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
+  <link rel="stylesheet" href="team.css">
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
@@ -85,6 +86,9 @@
           <button class="material-icons mdc-top-app-bar__navigation-icon mdc-icon-button">menu</button>
           <span class="mdc-top-app-bar__title"></span>
         </section>
+        <section class="team_number_div">
+            <h1 class="team_number"> 2264 </h1>
+        </section>
       </div>
     </header>
 
@@ -94,9 +98,17 @@
   </div>
 
 
+  <div>
+      <div class="team-info-left-box">
+        <div class="team-picture">
+          <img class="logo-icon" src="assets/testicon.png" />
+        </div>
+        <h1> X awards</h1>
+      </div>
 
-
-
+      <div class="team-years-right-box">
+      </div>
+</div>
 
 
 <div class="modal">
