--- a/team.html
+++ b/team.html
@@ -89,7 +89,7 @@
           <span class="mdc-top-app-bar__title"></span>
         </section>
         <section class="team_number_div">
-            <h1 class="team_number"> 2264 </h1>
+            <h1 class="team_number"> 254 </h1>
         </section>
       </div>
     </header>
@@ -107,7 +107,7 @@
                 <img class="logo-icon" src="assets/testicon.png" />
             </div>
         </div>
-        <h1> X awards</h1>
+        <h1 class="teamName">The Cheesy Poofs</h1>
       </div>
 
       <div class="team-years-right-box">
